--- a/loan.ipynb
+++ b/loan.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[511 rows x 10 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -306,77 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Male      420\n",
-      "Female     91\n",
-      "Name: Gender, dtype: int64\n",
-      "0     294\n",
-      "2      88\n",
-      "1      85\n",
-      "3+     44\n",
-      "Name: Dependents, dtype: int64\n",
-      "Yes    331\n",
-      "No     180\n",
-      "Name: Married, dtype: int64\n",
-      "Graduate        401\n",
-      "Not Graduate    110\n",
-      "Name: Education, dtype: int64\n",
-      "No     441\n",
-      "Yes     70\n",
-      "Name: Self_Employed, dtype: int64\n",
-      "1    431\n",
-      "0     80\n",
-      "Name: Credit_History, dtype: int64\n",
-      "Semiurban    197\n",
-      "Urban        165\n",
-      "Rural        149\n",
-      "Name: Property_Area, dtype: int64\n",
-      "low       273\n",
-      "medium    193\n",
-      "high       45\n",
-      "Name: Income, dtype: int64\n",
-      "Y    347\n",
-      "N    164\n",
-      "Name: Application_Status, dtype: int64\n"
+      "There are no duplicated records\n"
      ]
     }
    ],
    "source": [
-    "print(df.Gender.value_counts())\n",
-    "print(df.Dependents.value_counts())\n",
-    "print(df.Married.value_counts())\n",
-    "print(df.Education.value_counts())\n",
-    "print(df.Self_Employed.value_counts())\n",
-    "print(df.Credit_History.value_counts())\n",
-    "print(df.Property_Area.value_counts())\n",
-    "print(df.Income.value_counts())\n",
-    "print(df.Application_Status.value_counts())"
+    "if df.duplicated().sum() == 0:\n",
+    "    print('There are no duplicated records')"
    ]
   },
   {
@@ -388,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -403,13 +346,12 @@
     }
    ],
    "source": [
+    "# Percentage of applicants where dependents are [0,1,2,3+]\n",
     "def dep_app(number_of_dependents):\n",
     "    a = 100 * (df[df['Dependents'] == number_of_dependents].shape[0] / df.shape[0])\n",
     "    return round(a,2)\n",
-    "print('Applicants with {0} dependents are {1}%'.format('0',(dep_app('0'))))\n",
-    "print('Applicants with {0} dependents are {1}%'.format('1',(dep_app('1'))))\n",
-    "print('Applicants with {0} dependents are {1}%'.format('2',(dep_app('2'))))\n",
-    "print('Applicants with {0} dependents are {1}%'.format('3+',(dep_app('3+'))))"
+    "for i in df.Dependents.unique().tolist():\n",
+    "    print('Applicants with {0} dependents are {1}%'.format(i,(dep_app(i))))"
    ]
   },
   {
@@ -421,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -446,21 +388,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Married male rejections are 28.43%\n"
+      "Married male rejections percentage is 28.43%\n"
      ]
     }
    ],
    "source": [
     "mar_male_rej = 100 * (df[(df['Married'] == 'Yes') & (df['Gender'] == 'Male') & (df['Application_Status'] == 'N')].shape[0] / df[(df['Married'] == 'Yes') & \\\n",
     "    (df['Gender'] == 'Male')].shape[0])\n",
-    "print('Married male rejections are {0}%'.format(round(mar_male_rej,2)))"
+    "print('Married male rejections percentage is {0}%'.format(round(mar_male_rej,2)))"
    ]
   },
   {
@@ -472,17 +414,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rural have 60.4\n",
-      "Semiurban have 77.66\n",
-      "Urban have 63.03\n",
-      "Semiurban have maximum approval ratio - 77.66\n"
+      "Urban have 63.03% approval ratio.\n",
+      "Rural have 60.4% approval ratio.\n",
+      "Semiurban have 77.66% approval ratio.\n",
+      "Semiurban has maximum approval ratio\n"
      ]
     }
    ],
@@ -490,10 +432,11 @@
     "def property_approval_rate(Property):\n",
     "    a = 100 * (df[((df['Property_Area'] == Property) & (df['Application_Status'] == 'Y'))].shape[0] / df[df['Property_Area'] == Property].shape[0])\n",
     "    return round(a,2)\n",
-    "print('{0} have {1}'.format('Rural',(property_approval_rate('Rural'))))\n",
-    "print('{0} have {1}'.format('Semiurban',(property_approval_rate('Semiurban'))))\n",
-    "print('{0} have {1}'.format('Urban',(property_approval_rate('Urban'))))\n",
-    "print('{0} have maximum approval ratio - {1}'.format('Semiurban',property_approval_rate('Semiurban')))"
+    "dict = {}\n",
+    "for i in df.Property_Area.unique().tolist():\n",
+    "    print('{0} have {1}% approval ratio.'.format(i,(property_approval_rate(i))))\n",
+    "    dict[i] = [property_approval_rate(i)]\n",
+    "print('{0} has maximum approval ratio'.format(max(dict, key=dict.get)))"
    ]
   },
   {
@@ -505,77 +448,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0     173\n",
-       "1      42\n",
-       "2      41\n",
-       "3+     17\n",
-       "Name: Dependents, dtype: int64"
-      ]
-     },
-     "execution_count": 196,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of dependents per income group are\n",
+      "Income\n",
+      "high      0.89\n",
+      "low       0.64\n",
+      "medium    0.92\n",
+      "Name: dep, dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "dep_low = df[df['Income'] == 'low']['Dependents'].value_counts()\n",
-    "dep_low"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     100\n",
-       "2      41\n",
-       "1      30\n",
-       "3+     22\n",
-       "Name: Dependents, dtype: int64"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dep_medium = df[df['Income'] == 'medium']['Dependents'].value_counts()\n",
-    "dep_medium"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     21\n",
-       "1     13\n",
-       "2      6\n",
-       "3+     5\n",
-       "Name: Dependents, dtype: int64"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dep_high = df[df['Income'] == 'high']['Dependents'].value_counts()\n",
-    "dep_high"
+    "df_copy = df.copy()\n",
+    "df_copy['dep'] = pd.to_numeric(df_copy['Dependents'], errors='coerce')\n",
+    "df_copy.dep.fillna(3.0, inplace=True)\n",
+    "print('Average number of dependents per income group are')\n",
+    "print(df_copy.groupby(by='Income')['dep'].mean().round(2))"
    ]
   },
   {
@@ -587,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +552,7 @@
        "3         Urban       Unmarried               56           53.57"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +592,7 @@
        "       'Application_Status'], dtype=object)"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +615,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +811,7 @@
        "4                     1  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,22 +836,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy_Score = 0.8359375\n",
+      "Accuracy_Score = 0.828125\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0      0.952     0.500     0.656        40\n",
-      "           1      0.813     0.989     0.892        88\n",
+      "           0      0.889     0.444     0.593        36\n",
+      "           1      0.818     0.978     0.891        92\n",
       "\n",
-      "    accuracy                          0.836       128\n",
-      "   macro avg      0.883     0.744     0.774       128\n",
-      "weighted avg      0.857     0.836     0.818       128\n",
+      "    accuracy                          0.828       128\n",
+      "   macro avg      0.854     0.711     0.742       128\n",
+      "weighted avg      0.838     0.828     0.807       128\n",
       "\n"
      ]
     }
